--- a/lang/de.json
+++ b/lang/de.json
@@ -379,6 +379,7 @@
         "PiwikWillBeUpgradedFromVersionXToVersionY": "Die Piwik-Datenbank wird von Version %1$s auf die neue Version %2$s aktualisiert.",
         "PluginDescription": "Piwik-Aktualisierung",
         "ReadyToGo": "Sind Sie bereit?",
+        "TheFollowingDimensionsWillBeUpgradedX": "Die folgenden Dimensionen werden aktualisiert: %s.",
         "TheFollowingPluginsWillBeUpgradedX": "Die folgenden Plugins werden aktualisiert: %s",
         "ThereIsNewPluginVersionAvailableForUpdate": "Für einige der von Ihnen benutzten Plugins sind Aktualisierungen im Marketplace verfügbar:",
         "ThereIsNewVersionAvailableForUpdate": "Eine neue Version von Piwik ist verfügbar",
@@ -449,6 +450,7 @@
         "ContactThePiwikTeam": "Kontaktieren Sie das Piwik Team!",
         "DoYouHaveBugReportOrFeatureRequest": "Möchten Sie einen Fehler melden oder haben Sie eine Idee für eine neue Funktion?",
         "GetInTouch": "Wir wissen Ihr Feedback zu schätzen und lesen alle Nachrichten. Vielleicht wollen Sie ja eine Geschäftsmöglichkeit teilen, einen Piwik-Berater buchen, uns eine Erfolgsgeschichte erzählen oder einfach nur Hallo sagen!",
+        "HowToCreateTicket": "Bitte lesen Sie die Empfehlungen wie man eine gute %1$sFehlermeldung%2$s oder einen %3$sVerbesserungsvorschlag%4$s erstellt. Dann registrieren Sie sich oder loggen Sie sich bei %5$sunserem Fehlermeldesystem%6$s an und erstellen Sie einen %7$sneuen Fall%8$s.",
         "IWantTo": "Ich möchte:",
         "LearnWaysToParticipate": "Lernen Sie alle Möglichkeiten kennen, wie Sie %s uns unterstützen können%s",
         "ManuallySendEmailTo": "Senden Sie Ihre Nachricht manuell an",
@@ -605,6 +607,7 @@
         "EncryptedSmtpTransport": "Geben Sie hier die von Ihrem SMTP-Server benötigte Verschlüsselung ein.",
         "EnglishLanguageName": "German",
         "Error": "Fehler",
+        "ErrorRequest": "Oops… während der Anfrage ist ein Problem aufgetreten. Möglicherweise war der Server temporär überlastet, oder eventuell haben Sie einen Bericht mit zu vielen Daten angefordert. Bitte noch einmal versuchen. Wenn dieser Fehler wiederholt auftritt %skontaktieren Sie bitte Ihren Piwik Administrator%s um Unterstützung zu erhalten.",
         "EvolutionOverPeriod": "Entwicklung über den Zeitraum",
         "EvolutionSummaryGeneric": "%1$s in %2$s verglichen mit %3$s in %4$s. Entwicklung: %5$s",
         "ExceptionCheckUserHasSuperUserAccessOrIsTheUser": "Der Benutzer muss entweder ein Hauptadministrator sein oder der Benutzer '%s'.",
@@ -629,9 +632,11 @@
         "ExceptionPrivilege": "Sie können auf die Ressource nicht zugreifen, da Sie dafür mindestens %s Rechte benötigen.",
         "ExceptionPrivilegeAccessWebsite": "Sie können auf diese Ressource nicht zugreifen, da es mindestens %s-Rechte für die Webseiten-ID %d benötigt.",
         "ExceptionPrivilegeAtLeastOneWebsite": "Sie können auf diese Ressource nicht zugreifen, da eine %s Berechtigung für mindestens eine Webseite benötigt wird.",
+        "ExceptionReportNotEnabled": "Der gesuchte Bericht ist nicht aktiviert. Das bedeutet normalerweise entweder dass das Plugin welches den Bericht definiert deaktiviert ist oder Sie haben nicht die benötigten Berechtigungen um diesen Bericht einzusehen.",
         "ExceptionUnableToStartSession": "Starten einer Session nicht möglich.",
         "ExceptionUndeletableFile": "Kann %s nicht löschen.",
         "ExceptionUnreadableFileDisabledMethod": "Die Konfigurationsdatei {%s} konnte nicht gelesen werden. Ihr Host hat möglicherweise %s deaktiviert.",
+        "ExceptionWidgetNotFound": "Das gesuchte Widget existiert nicht.",
         "ExpandDataTableFooter": "Ändern Sie die Darstellung oder konfigurieren den Bericht",
         "Export": "Export",
         "ExportAsImage": "Als Bild exportieren",
@@ -1009,21 +1014,34 @@
     },
     "Insights": {
         "ControlComparedToDescription": "Wachstum verglichen zu",
+        "ControlFilterByDescription": "Zeige alle, nur Verschiebungen, nur neue oder nur Ausstiege",
+        "DatePeriodCombinationNotSupported": "Es ist nicht möglich, Ansichten für dieses Datums- und Zeitbereichskombination zu generieren.",
         "DayComparedToPreviousDay": "vorheriger Tag",
         "DayComparedToPreviousWeek": "gleicher Tag in vorheriger Woche",
         "DayComparedToPreviousYear": "gleicher Tag im vorherigen Jahr",
         "Filter": "Filter",
+        "FilterIncreaserAndDecreaser": "Steigerungen & Reduktionen",
+        "FilterOnlyDecreaser": "Nur Reduktionen",
+        "FilterOnlyDisappeared": "Nur Ausstiege",
+        "FilterOnlyIncreaser": "Nur Steigerungen",
+        "FilterOnlyMovers": "Nur Verschiebungen",
         "FilterOnlyNew": "Nur neue",
         "IgnoredChanges": "Änderungen, die weniger als %s Besuche betreffen, wurden ignoriert.",
         "MonthComparedToPreviousMonth": "vorheriger Monat",
         "MonthComparedToPreviousYear": "gleicher Monat im vorherigen Jahr",
+        "MoversAndShakersWidgetTitle": "Verschiebungen und Streuungen",
         "NoResultMatchesCriteria": "Keine Zeilen entsprechen den Kriterien",
+        "OverviewWidgetTitle": "Insights Übersicht",
+        "TitleConsideredInsightsChanges": "Die Zeilen steigerten sich oder sanken um mindestens %1$s Besuche (%2$s%% von %3$s Total Besuchen).",
+        "TitleConsideredInsightsGrowth": "Die folgenden Zeilen steigerten sich um mindestens %1$s%% verglichen mit %2$s.",
+        "TitleConsideredMoversAndShakersChanges": "Berücksichtigte Verschiebungen nur wenn sie sich um mehr als %1$s%% Besuche steigerten oder sich auf weniger als %2$s%% Besuche reduzierten, neue Einträge nur bei Steigerungen um mehr als %3$s%% Besuche (%4$s), und verlorene Zeilen wenn Sie sich auf weniger als %5$s%% Besuche (%6$s) reduzierten.",
         "TitleConsideredMoversAndShakersGrowth": "%1$s hat sich von %2$s auf %3$s geändert verglichen mit %4$s. Darauf basierend ist eine Entwicklung jeder Reihe über %5$s%% zu erwarten.",
         "TitleRowChangeDetails": "'%1$s' hat sich geändert von %2$s (%3$s) zu %4$s (%5$s) %6$s.",
         "TitleRowDisappearedDetails": "'%1$s' ist um %2$s gesunken und verschwand in %3$s verglichen zu %4$s.",
         "TitleRowMoverAndShaker": "Diese Reihe hatte einen größeren Einfluss als der Durchschnitt.",
         "TitleRowNewDetails": "'%1$s' ist um %2$s gestiegen und ist neu im Vergleich zu %3$s.",
         "WeekComparedToPreviousWeek": "vorherige Woche",
+        "WidgetCategory": "Insights",
         "YearComparedToPreviousYear": "vorheriges Jahr"
     },
     "Installation": {
@@ -1070,6 +1088,8 @@
         "PasswordDoNotMatch": "Passwörter stimmen nicht überein",
         "PasswordRepeat": "Passwort (wiederholen)",
         "PercentDone": "%s %% Fertig",
+        "PiwikOrgNewsletter": "Wichtige Piwik Community Updates per Mail zukommen lassen",
+        "PiwikProNewsletter": "Ich interessiere mich für den %sPiwik PRO%s Service (nicht mehr als 1 E-Mail pro Monat)",
         "PleaseFixTheFollowingErrors": "Bitte beheben Sie die folgenden Fehler",
         "PluginDescription": "Installationsprozess. Die Installation wird einmalig durchgeführt. Wenn die Konfigurationsdatei (config\/config.php) gelöscht wird, startet die Installation erneut.",
         "Requirements": "Anforderungen für die Piwik-Installation",
@@ -1090,6 +1110,8 @@
         "SystemCheck": "Systemprüfung",
         "SystemCheckAutoUpdateHelp": "Hinweis: Piwik's Ein-Klick-Aktualisierung benötigt Schreibrechte für den Piwik-Ordner und dessen Inhalt.",
         "SystemCheckCreateFunctionHelp": "Piwik verwendet anonyme Funktionen für Rückfragen.",
+        "SystemCheckCronArchiveProcess": "Archiv Cron",
+        "SystemCheckCronArchiveProcessCLI": "Prozesse via CLI steuern",
         "SystemCheckDatabaseHelp": "Piwik erfordert entweder die mysqli Erweiterung oder die PDO und pdo_mysql Erweiterung.",
         "SystemCheckDebugBacktraceHelp": "View::factory wird nicht in der Lage sein, die Module für die Anzeige zu laden.",
         "SystemCheckError": "Ein Fehler ist aufgetreten - dieser muss behoben werden, bevor Sie weiter machen können.",
@@ -1118,6 +1140,7 @@
         "SystemCheckPdoAndMysqliHelp": "Auf einem Linux-Server können Sie PHP mit den folgenden Optionen kompilieren: %1$s In Ihrer php.ini fügen Sie dann die folgenden Zeilen ein: %2$s",
         "SystemCheckPhp": "PHP-Version",
         "SystemCheckPhpPdoAndMysqli": "Weitere Informationen unter: %1$sPHP PDO%2$s und %3$sMYSQLI%4$s.",
+        "SystemCheckSessionAutostart": "Um Probleme zu vermeiden erfassen Sie bitte folgenden Eintrag in Ihrer php.ini Datei: session.auto_start=0",
         "SystemCheckSplHelp": "Sie müssen PHP mit standardmäßig aktivierter Standard PHP Bibliothek (SPL) konfigurieren und neu übersetzen.",
         "SystemCheckSummaryNoProblems": "Gratulation! Es gibt keine Probleme mit Ihrer Piwik Installation. Sie können sich selbst auf die Schulter klopfen.",
         "SystemCheckSummaryThereWereErrors": "Ohje! Piwik hat einige %1$skritische Fehler%2$s mit Ihrer Installation festgestellt. %3$sDiese sollten schnellstmöglich behoben werden.%4$s",
