--- a/lang/el.json
+++ b/lang/el.json
@@ -104,6 +104,7 @@
         "DevelopmentProcess": "Παρόλο που η %sδιαδικασία μας ανάπτυξης%s περιλαμβάνει χιλιάδες αυτοματοποιημένων ελέγχων, οι χρήστες δοκιμαστές παίζουν ένα κύριο ρόλο στο να πετύχουμε την \"Χωρίς σφάλματα πολιτική\" του Piwik.",
         "EmailServerSettings": "Ρυθμίσεις διακομιστή ηλεκτρονικής αλληλογραφίας",
         "FaviconUpload": "Επιλέξτε ένα favicon για ανέβασμα",
+        "FileUploadDisabled": "Το ανέβασμα των αρχείων δεν είναι ενεργοποιημένο στην παραμετροποίηση της PHP. Για να ανεβάσετε το δικό σας λογότυπο ορίστε το %s στο αρχείο php.ini και κάντε επανεκκίνηση τον διακομιστή ιστού σας.",
         "ForBetaTestersOnly": "Για χρήστες δοκιμαστές μόνο",
         "ImageTracking": "Παρακολούθηση Εικόνων",
         "ImageTrackingIntro1": "Όταν ένας επισκέπτης έχει απενεργοποιήσει την JavaScript ή όταν η JavaScript δεν μπορεί να χρησιμοποιηθεί, μπορείτε να χρησιμοποιήσετε ένα σύνδεσμο εντοπισμού εικόνων για να παρακολουθείτε τους επισκέπτες.",
@@ -379,6 +380,7 @@
         "PiwikWillBeUpgradedFromVersionXToVersionY": "Η βάση δεδομένων Piwik θα αναβαθμιστεί από την έκδοση %1$s στην έκδοση %2$s.",
         "PluginDescription": "Μηχανισμός ενημέρωσης Piwik",
         "ReadyToGo": "Έτοιμοι για να συνεχίσετε;",
+        "TheFollowingDimensionsWillBeUpgradedX": "Οι ακόλουθες διαστάσεις θα ενημερωθούν: %s.",
         "TheFollowingPluginsWillBeUpgradedX": "Τα ακόλουθα πρόσθετα θα αναβαθμιστούν: %s.",
         "ThereIsNewPluginVersionAvailableForUpdate": "Ορισμένα πρόσθετα που χρησιμοποιείτε έχουν ενημερωθεί στην Αγορά:",
         "ThereIsNewVersionAvailableForUpdate": "Υπάρχει νέα έκδοση του Piwik διαθέσιμη για λήψη",
@@ -449,6 +451,7 @@
         "ContactThePiwikTeam": "Επικοινωνήστε με την ομάδα του Piwik!",
         "DoYouHaveBugReportOrFeatureRequest": "Έχετε να αναφέρετε ένα πρόβλημα ή ένα αίτημα για χαρακτηριστικό;",
         "GetInTouch": "Ευχαριστούμε για τα σχόλιά σας και να ξέρετε ότι διαβάζουμε όλα τα μηνύματα. Μπορεί να θέλετε να μοιραστείτε μαζί μας μια επιχειρηματική ευκαιρία εργασίας, να μας πείτε την ιστορία επιτυχίας σας ή απλά να πείτε ένα Γεια!",
+        "HowToCreateTicket": "Παρακαλούμε διαβάστε τις προτάσεις για τη σύνταξη μιας καλής %1$sαναφοράς σφάλματος%2$s ή %3$sαίτησης για νέο χαρακτηριστικό%4$s. Στη συνέχεια κάντε εγγραφή ή συνδεθείτε στην %5$sπαρακολούθηση αιτημάτων%6$s και υποβάλλετε ένα %7$sνέο αίτημα%8$s.",
         "IWantTo": "Θέλω να:",
         "LearnWaysToParticipate": "Μάθετε όλους του τρόπους που μπορείτε να %sσυμμετέχετε%s",
         "ManuallySendEmailTo": "Στείλτε χειροκίνητα το μήνυμά σας στον\/στην",
@@ -631,9 +634,12 @@
         "ExceptionPrivilege": "Δεν έχετε πρόσβαση σε αυτή την προέλευση καθώς απαιτεί πρόσβαση %s.",
         "ExceptionPrivilegeAccessWebsite": "Δεν έχετε πρόσβαση σε αυτή την προέλευση καθώς απαιτεί πρόσβαση %s για την ιστοσελίδα με ταυτότητα = %d.",
         "ExceptionPrivilegeAtLeastOneWebsite": "Δεν έχετε πρόσβαση σε αυτή τη προέλευση καθώς απαιτεί πρόσβαση %s για τουλάχιστον μια ιστοσελίδα.",
+        "ExceptionReportNotEnabled": "Η ζητούμενη αναφορά δεν είναι ενεργή. Αυτό συνήθως σημαίνει ότι είτε το πρόσθετο που ορίζει την αναφορά είναι ανενεργό είτε δεν έχετε την απαιτούμενη πρόσβαση για να την δείτε.",
+        "ExceptionReportNotFound": "Δεν υπάρχει η ζητούμενη αναφορά.",
         "ExceptionUnableToStartSession": "Αδύνατη η έναρξη της συνεδρίας.",
         "ExceptionUndeletableFile": "Αδύνατη η διαγραφή του %s",
         "ExceptionUnreadableFileDisabledMethod": "Το αρχείο ρυθμίσεων (%s) δεν μπορεί να αναγνωστεί. Ο διακομιστής σας μπορεί να απενεργοποίησε το %s.",
+        "ExceptionWidgetNotFound": "Το ζητούμενο γραφικό συστατικό δεν υπάρχει.",
         "ExpandDataTableFooter": "Αλλάξτε την οπτική εμφάνιση ή διευθετήστε την αναφορά",
         "Export": "Εξαγωγή",
         "ExportAsImage": "Εξαγωγή ως εικόνα",
@@ -1042,6 +1048,8 @@
         "YearComparedToPreviousYear": "προηγούμενο έτος"
     },
     "Installation": {
+        "CannotConnectToDb": "Δεν είναι δυνατή η σύνδεση με τη βάση δεδομένων.",
+        "CannotConnectToDbResolvingExplanation": "Ενδεχομένως να υπάρχει ένα προσωρινό πρόβλημα, δοκιμάστε να %1$sανανεώστε τη σελίδα%2$s. Αν το πρόβλημα παραμένει, παρακαλούμε επικοινωνήστε με το διαχειριστή του Piwik.",
         "CollaborativeProject": "Το Piwik είναι ένα συνεργατικό έργο, δημιουργημένο με αγάπη από ανθρώπους από όλο τον κόσμο.",
         "ConfigurationHelp": "Οι ρυθμίσεις του Piwik φαίνεται ότι έχουν πρόβλημα. Μπορείτε να απομακρύνετε το config\/config.ini.php και να συνεχίσετε την εγκατάσταση ή διορθώστε τις ρυθμίσεις σύνδεσης της βάσης δεδομένων.",
         "ConfirmDeleteExistingTables": "Θέλετε σίγουρα να διαγράψετε τους πίνακες: %s από τη βάση δεδομένων σας; ΠΡΟΕΙΔΟΠΟΙΗΣΗ: ΤΑ ΔΕΔΟΜΕΝΑ ΑΠΟ ΑΥΤΟΥΣ ΤΟΥ ΠΙΝΑΚΕΣ ΔΕΝ ΘΑ ΜΠΟΡΟΥΝ ΝΑ ΑΝΑΚΤΗΘΟΥΝ!",
@@ -1170,7 +1178,8 @@
     },
     "LanguagesManager": {
         "AboutPiwikTranslations": "Πληροφόρηση",
-        "PluginDescription": "Αυτό το πρόσθετο θα προβάλει μια λίστα με τις διαθέσιμες γλώσσες για το περιβάλλον του Piwik. Η επιλεχθείσα γλώσσα θα αποθηκευτεί στις προτιμήσεις κάθε χρήστη."
+        "PluginDescription": "Αυτό το πρόσθετο θα προβάλει μια λίστα με τις διαθέσιμες γλώσσες για το περιβάλλον του Piwik. Η επιλεχθείσα γλώσσα θα αποθηκευτεί στις προτιμήσεις κάθε χρήστη.",
+        "TranslationSearch": "Αναζήτηση Μετάφρασης"
     },
     "Live": {
         "AbandonedCartSummary": "%1$s%2$s εγκατέλειψε καλάθια%3$s και %4$s εγκαταλελειμμένα αντικείμενα %5$sαξίας συνόλου %6$s%7$s.",
@@ -1245,6 +1254,7 @@
         "ChooseHttpTimeout": "Επιλέξτε τιμή χρόνου λήξης HTTP",
         "ChooseMetric": "Επιλογή Μέτρησης",
         "ChooseReport": "Επιλέξτε μια αναφορά",
+        "ChooseSegment": "Επιλέξτε τμήμα",
         "ConfirmRemoveAccount": "Θέλετε να αφαιρέσετε το λογαριασμό αυτό;",
         "DefaultReportDate": "Ημερομηνία αναφοράς",
         "EmailUs": "Στείλτε μας e-mail",
@@ -2087,6 +2097,8 @@
         "ShowingVisits": "Επισκέψεις με γεωτοποθεσία από τις τελευταίες",
         "Unlocated": "<b>%s<\/b> %p από τις επισκέψεις από %c δεν ήταν δυνατόν να χαρακτηριστούν με γεωτοποθεσία.",
         "VisitorMap": "Χάρτης Επισκεπτών",
+        "WithUnknownCity": "%s με άγνωστη πόλη",
+        "WithUnknownRegion": "%s με άγνωστη περιοχή",
         "WorldWide": "Παγκοσμίως"
     },
     "UserSettings": {
