--- a/lang/sl.json
+++ b/lang/sl.json
@@ -49,10 +49,14 @@
     },
     "Annotations": {
         "Annotations": "Beležke",
+        "ClickToDelete": "Kliknite za izbris te beležke.",
+        "ClickToEdit": "Kliknite za urejanje te beležke.",
+        "ClickToEditOrAdd": "Kliknite za urejanje ali dodajanje nove beležke.",
         "EnterAnnotationText": "Dodajte svojo opombo...",
         "HideAnnotationsFor": "Skrij opombe za %s...",
         "IconDesc": "Preglej opombe za ta časovni razpon.",
         "IconDescHideNotes": "Skrij opombe za ta časovni razpon.",
+        "LoginToAnnotate": "Za kreiranje beležke se morate prijaviti.",
         "ViewAndAddAnnotations": "Preglej in dodaj opombe za %s..."
     },
     "API": {
@@ -73,9 +77,11 @@
         "CustomLogoHelpText": "Piwik-ov logo lahko prilagodite po vaših željah. Spremembe bodo vidne tako v uporabniškem vmesniku, kot v email poročilih.",
         "EmailServerSettings": "Nastavitev strežnika za email",
         "ImageTracking": "Sledenje s pomočjo slike",
+        "JavaScriptTracking": "Sledenje s pomočjo Javascripta",
         "LatestBetaRelease": "Zadnja beta različica",
         "LatestStableRelease": "Zadnja stabilna različica",
         "LogoUpload": "Izberite Logo za nalaganje",
+        "MenuDevelopment": "Razvoj",
         "MenuDiagnostic": "Diagnostika",
         "MenuGeneralSettings": "Splošne nastavitve",
         "MenuManage": "Upravljaj",
@@ -101,13 +107,18 @@
         "PeriodWeeks": "tednov",
         "PeriodYear": "Leto",
         "PeriodYears": "let",
+        "ReportGeneratedOn": "Poročilo ustvarjano na %s",
+        "ReportGeneratedXAgo": "Poročilo ustvarjano pred %s",
         "ShowJSCode": "Prikaži JavaScript kodo za vstavljanje",
         "ThereIsNoDataForThisReport": "Za to poročilo ni podatkov."
     },
     "CorePluginsAdmin": {
+        "ActionInstall": "Namesti",
+        "ActionUninstall": "Odstrani",
         "Activate": "Omogoči",
         "Activated": "Omogočeno",
         "Active": "Aktivno",
+        "Activity": "Aktivnost",
         "AuthorHomepage": "Spletna stran avtorja",
         "Deactivate": "Onemogoči",
         "Inactive": "Neaktivno",
