--- a/lang/tr.json
+++ b/lang/tr.json
@@ -135,6 +135,7 @@
         "LatestStableRelease": "En son kararlı sürüm",
         "LogoUpload": "Yüklemek için logo seçiniz",
         "LogoUploadHelp": "Lütfen %s formatlarında ve minimum %s piksel yüksekliğinde bir dosya yükleyin.",
+        "MenuDevelopment": "Geliştirme",
         "MenuDiagnostic": "tehşis",
         "MenuGeneralSettings": "Genel Ayarlar",
         "MenuManage": "yönetmek",
@@ -396,6 +397,7 @@
         "BackToPiwik": "Piwik'e geri dön.",
         "Broken": "Kırık",
         "Cancel": "İptal",
+        "CannotUnzipFile": "Zip'den çıkarılamıyor %1$s: %2$s",
         "ChangePassword": "Şifre değiştir",
         "ChooseDate": "Tarih Seçimi",
         "ChooseLanguage": "Dil seçin",
@@ -478,6 +480,7 @@
         "Done": "Yapıldı",
         "Download": "İndir",
         "DownloadFail_FileExists": "Dosya %s zaten var!",
+        "DownloadPleaseRemoveExisting": "Eğer yer değiştirmek istiyorsanız, lütfen önce varolan dosyayı silin.",
         "Downloads": "İndirilenler",
         "EcommerceOrders": "ETicaret Siparişleri",
         "Edit": "Düzenle",
@@ -600,6 +603,7 @@
         "OnlyEnterIfRequired": "SMTP sunucusu için gerekli olan kullanıcı adını giriniz.",
         "OnlyEnterIfRequiredPassword": "SMTP sunucusu için gerekli olan şifreyi giriniz.",
         "OpenSourceWebAnalytics": "Açık kaynak kodlu Web İstatistik Servisi",
+        "OperationAtLeast": "Sonunda",
         "OperationContains": "İçerir",
         "OperationDoesNotContain": "İçermez",
         "OperationEquals": "Eşittir",
@@ -721,6 +725,7 @@
         "YearlyReport": "yıllık",
         "YearlyReports": "Yıllık raporlar",
         "YearsDays": "%1$s yıl %2$s gün",
+        "YearShort": "yıl",
         "Yes": "Evet",
         "Yesterday": "Gün",
         "YouMustBeLoggedIn": "Bu işleve erişmek için oturumu açmış olmanız gerekmekte.",
