refs #5977 group goals in a menu if there are more than 3 goals. I reused an existing menuDropDown component that was already used for Language and Usermenu. I removed the round border there as all our other components to not have round corners. Also had to add some z-index because Segment and Date picker define a z-index. So to make sure the components are correct visible I had to add a z-index to the submenu and therefore to the top menu. I hope this does not introduce any side effects. Tested with leftMenu and with ZenMode...

--- a/lang/en.json
+++ b/lang/en.json
@@ -817,6 +817,7 @@
         "Save": "Save",
         "SaveImageOnYourComputer": "To save the image on your computer, right click on the image and select \"Save Image As...\"",
         "Search": "Search",
+        "Clear": "Clear",
         "SearchNoResults": "No results",
         "Seconds": "%ss",
         "SeeAll": "see all",
@@ -927,6 +928,7 @@
         "BestKeywords": "Your top converting keywords are:",
         "BestReferrers": "Your best converting websites referrers are:",
         "CaseSensitive": "Case sensitive match",
+        "ChooseGoal": "Choose Goal",
         "ClickOutlink": "Click on a Link to an external website",
         "ColumnAverageOrderRevenueDocumentation": "Average Order Value (AOV) is the total revenue from all Ecommerce Orders divided by the number of orders.",
         "ColumnAveragePriceDocumentation": "The average revenue for this %s.",
