refs #5989 #6026 let users define a goal depending on an event and fix the examples and condition was not updated when user changes the match_attribute

--- a/lang/en.json
+++ b/lang/en.json
@@ -930,6 +930,7 @@
         "CaseSensitive": "Case sensitive match",
         "ChooseGoal": "Choose Goal",
         "ClickOutlink": "Click on a Link to an external website",
+        "SendEvent": "Send an event",
         "ColumnAverageOrderRevenueDocumentation": "Average Order Value (AOV) is the total revenue from all Ecommerce Orders divided by the number of orders.",
         "ColumnAveragePriceDocumentation": "The average revenue for this %s.",
         "ColumnAverageQuantityDocumentation": "The average quantity of this %s sold in Ecommerce orders.",
