refs #4996 archiving of impressions should work now, displaying impressions should work (contentName => contentPiece and contentPiece => contentName). Next step: Matching interactions with impressions then this part is nearly done hopefully

--- a/plugins/Contents/lang/en.json
+++ b/plugins/Contents/lang/en.json
@@ -1,6 +1,8 @@
 {
     "Contents":{
         "Impressions":"Impressions",
+        "Interactions":"Interactions",
+        "InteractionRate":"Interaction Rate",
         "ContentName":"Content Name",
         "ContentPiece":"Content Piece",
         "ContentTarget":"Content Target",
