--- a/plugins/Contents/lang/en.json
+++ b/plugins/Contents/lang/en.json
@@ -2,6 +2,7 @@
     "Contents":{
         "Impressions":"Impressions",
         "Interactions":"Interactions",
+        "Interaction":"Interaction",
         "InteractionRate":"Interaction Rate",
         "ContentName":"Content Name",
         "ContentPiece":"Content Piece",
