refs #6114 - fixed name of Norwegian Bokmål

--- a/plugins/UserSettings/lang/en.json
+++ b/plugins/UserSettings/lang/en.json
@@ -125,7 +125,7 @@
         "Language_mt": "Maltese",
         "Language_my": "Burmese",
         "Language_na": "Nauru",
-        "Language_nb": "Norwegian Bokma\u00e5l",
+        "Language_nb": "Norwegian Bokm\u00e5l",
         "Language_nd": "North Ndebele",
         "Language_ne": "Nepali",
         "Language_ng": "Ndonga",
